// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Fetch resolve data with lazy loading. 1`] = `
<div>
  parent
</div>
`;

exports[`Fetch resolve data with lazy loading. 2`] = `
<div>
  child
</div>
`;

exports[`Fetch resolve data with reusable resolve data. 1`] = `
{
  "web": {
    "projects": [
      {
        "id": "AWgrmJp1SjjuUM2bzZXM",
        "title": "Project",
      },
    ],
    "user": "old user",
  },
}
`;

exports[`Fetch resolve data. 1`] = `
{
  "web": {
    "projects": [
      {
        "id": "AWgrmJp1SjjuUM2bzZXM",
        "title": "Project",
      },
    ],
    "user": {
      "id": "AWgrmJp1SjjuUM2bzZXM",
      "name": "User",
    },
  },
}
`;

exports[`Find the route by the name. 1`] = `
Route {
  "component": undefined,
  "dismissalDelay": undefined,
  "generateLocation": [Function],
  "generateUri": [Function],
  "isAbstract": false,
  "loadComponent": undefined,
  "matchPattern": "/",
  "matchReg": /\\^\\\\/\\$/,
  "name": "web",
  "onEnter": undefined,
  "parents": [],
  "resolve": {},
  "uri": "/",
  "uriParamKeys": [],
  "uriTemplate": "/",
}
`;

exports[`Flatten resolve data. 1`] = `
{
  "user": {
    "id": "id",
    "name": "name",
  },
}
`;

exports[`Parse params from the location. 1`] = `
{
  "index": "0",
  "sort": "asc",
  "userId": "AWgrmJp1SjjuUM2bzZXM",
}
`;
